unpackaged/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Disbursal_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Disbursal_Date__c</fullName>
    <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
    <description>By default, this is the date specified in the proposed disbursal date in the account details. If the date is modified during loan disbursal, the repayment schedule is regenerated accordingly.</description>
    <inlineHelpText>By default, this is the date specified in the proposed disbursal date in the account details. If the date is modified during loan disbursal, the repayment schedule is regenerated accordingly.</inlineHelpText>
    <label>Disbursal Date</label>
    <type>Date</type>
</CustomField>