unpackaged/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Financed_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Financed_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Amount to be disbursed to borrower.</inlineHelpText>
    <label>Financed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>