unpackaged/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Account__c</fullName>
    <description>Loan Account</description>
    <inlineHelpText>Loan Account</inlineHelpText>
    <label>Loan Account</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipLabel>Loan Disbursal Transactions</relationshipLabel>
    <relationshipName>Loan_Disbursal_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>