unpackaged/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Loan_Disbursal_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Disbursal_Transaction_Type__c</fullName>
    <label>Disbursal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Principal Adjustment - Add</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>