unpackaged/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Refinanced_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Refinanced_Amount__c</fullName>
    <inlineHelpText>Sum of the pay-off amounts of refinanced loan accounts</inlineHelpText>
    <label>Total Refinanced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>