unpackaged/main/default/objects/loan__Loan_Disbursal_Transaction__c/validationRules/Bank_Account_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Account_Check</fullName>
    <active>true</active>
    <errorConditionFormula>(loan__Bank_Account__r.loan__Account__c  &lt;&gt;  loan__Loan_Account__r.loan__Account__c ) &amp;&amp;  (loan__Bank_Account__c &lt;&gt; null)</errorConditionFormula>
    <errorDisplayField>loan__Bank_Account__c</errorDisplayField>
    <errorMessage>Bank Account is not valid for this Borrower.Please select the correct option.</errorMessage>
</ValidationRule>