unpackaged/main/default/objects/loan__Loan_Disbursal_Transaction__c/validationRules/loan__Check_Draw_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Draw_Period</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; AND( ISPICKVAL(loan__Loan_Account__r.loan__Product_Type__c, 'Line Of Credit'),loan__Disbursal_Date__c&gt;DATE(
year(loan__Loan_Account__r.loan__Disbursal_Date__c)
+ floor((month(loan__Loan_Account__r.loan__Disbursal_Date__c) + loan__Loan_Account__r.loan__draw_term__c)/12) + if(and(month(loan__Loan_Account__r.loan__Disbursal_Date__c)=12,loan__Loan_Account__r.loan__draw_term__c&gt;=12),-1,0)
,
if( mod( month(loan__Loan_Account__r.loan__Disbursal_Date__c) + loan__Loan_Account__r.loan__draw_term__c , 12 ) = 0, 12 , mod( month(loan__Loan_Account__r.loan__Disbursal_Date__c) + loan__Loan_Account__r.loan__draw_term__c , 12 ))
,
min(
day(loan__Loan_Account__r.loan__Disbursal_Date__c),
case(
max( mod( month(loan__Loan_Account__r.loan__Disbursal_Date__c) + loan__Loan_Account__r.loan__draw_term__c , 12 ) , 1),
9,30,
4,30,
6,30,
11,30,
2,28,
31
)
)
))</errorConditionFormula>
    <errorMessage>Advance date is after draw period expiry date, disbursement not allowed.</errorMessage>
</ValidationRule>