unpackaged/main/default/objects/loan__Loan_Disbursal_Transaction__c/validationRules/loan__Check_Existing_Disbursal_Txn.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Existing_Disbursal_Txn</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()  &amp;&amp; AND(loan__Loan_Account__r.loan__Cleared_Disbursal_Txn_Count__c &gt; 0, ISPICKVAL(loan__Loan_Account__r.loan__Product_Type__c, 'Loan'), NOT( loan__Loan_Account__r.loan__Funding_in_Tranches__c), NOT(ISPICKVAL(loan__Loan_Disbursal_Transaction_Type__c, 'Principal Adjustment - Add')))</errorConditionFormula>
    <errorMessage>This loan account has already been disbursed.</errorMessage>
</ValidationRule>