unpackaged/main/default/objects/loan__Loan_Disbursal_Transaction__c/validationRules/loan__Cheque_Mode_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Cheque_Mode_Check</fullName>
    <active>false</active>
    <errorConditionFormula>loan__Mode_of_Payment__r.Name == 'Check' &amp;&amp; ISBLANK( loan__Check__c )</errorConditionFormula>
    <errorMessage>Please  input a check.</errorMessage>
</ValidationRule>