unpackaged/main/default/objects/loan__Loan_Disbursal_Transaction__c/validationRules/loan__Disbursal_Date_Null_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Disbursal_Date_Null_Check</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(loan__Disbursal_Date__c)</errorConditionFormula>
    <errorMessage>Disbursal Transaction Date cannot be null.</errorMessage>
</ValidationRule>