unpackaged/main/default/objects/loan__Loan_Disbursal_Transaction__c/validationRules/loan__First_Payment_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__First_Payment_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(loan__Loan_Account__r.loan__Product_Type__c, 'Loan'), NOT(loan__Loan_Account__r.loan__Funding_in_Tranches__c),( loan__Loan_Account__r.loan__Cleared_Disbursal_Txn_Count__c = 0), NOT(ISBLANK(loan__Loan_Account__r.loan__First_Installment_Date__c) ), NOT(ISBLANK(loan__Disbursal_Date__c) ), (loan__Disbursal_Date__c  &gt;  loan__Loan_Account__r.loan__First_Installment_Date__c))</errorConditionFormula>
    <errorMessage>Disbursal Transaction Date should be on or before the First Payment Date.</errorMessage>
</ValidationRule>