unpackaged/main/default/objects/loan__Loan_Disbursal_Transaction__c/validationRules/loan__FiT_Last_Billing_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__FiT_Last_Billing_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),
ISPICKVAL(loan__Loan_Account__r.loan__Product_Type__c, 'Loan'),
(loan__Loan_Account__r.loan__Cleared_Disbursal_Txn_Count__c &gt; 0),
NOT(ISBLANK(loan__Loan_Account__r.loan__Previous_Installment_Date__c)),
NOT(ISBLANK(loan__Loan_Account__r.loan__Pre_Bill_Days__c)),
(loan__Disbursal_Date__c  &lt;  (loan__Loan_Account__r.loan__Previous_Installment_Date__c -  loan__Loan_Account__r.loan__Pre_Bill_Days__c)))</errorConditionFormula>
    <errorMessage>Disbursal Transaction Date cannot be before the Last Billing Date.</errorMessage>
</ValidationRule>