unpackaged/main/default/objects/loan__Loan_Disbursal_Transaction__c/validationRules/loan__Internal_Transfer_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Internal_Transfer_Check</fullName>
    <active>true</active>
    <errorConditionFormula>loan__Mode_of_Payment__r.Name == 'Internal Transfer' &amp;&amp; ISBLANK( loan__Loan_Account__r.loan__Savings_Account__c )</errorConditionFormula>
    <errorMessage>No savings account is linked to this loan to perform an internal transfer.</errorMessage>
</ValidationRule>