unpackaged/main/default/objects/loan__Loan_Disbursal_Transaction__c/validationRules/loan__Loan_Status_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Loan_Status_Check</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;
(TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = 'Partial Application' ||  TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = 'Pending Approval' ||  TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = 'Canceled' ||  TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = 'Closed - Obligations met' ||
TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = 'Closed - Rescheduled' ||
TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = 'Closed- Written Off' ||
TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = 'Disbursed to LO' ||
TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = 'Partial Application')</errorConditionFormula>
    <errorMessage>Invalid Loan Status. You cannot disburse this loan.</errorMessage>
</ValidationRule>