unpackaged/main/default/objects/loan__Loan_Disbursal_Transaction__c/validationRules/loan__LOC_Last_Accrual_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__LOC_Last_Accrual_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( loan__Loan_Account__r.loan__Accrual_Start_Days__c == 0,ISPICKVAL(loan__Loan_Account__r.loan__Product_Type__c, 'Line of Credit'), ( loan__Loan_Account__r.loan__Cleared_Disbursal_Txn_Count__c &gt; 0), NOT(ISBLANK(loan__Loan_Account__r.loan__Last_Accrual_Date__c)), (loan__Disbursal_Date__c  &lt;  loan__Loan_Account__r.loan__Last_Accrual_Date__c))</errorConditionFormula>
    <errorDisplayField>loan__ACH_Filename__c</errorDisplayField>
    <errorMessage>Disbursal Transaction Date cannot be before the Last Interest Accrual Date.</errorMessage>
</ValidationRule>