unpackaged/main/default/objects/loan__Loan_Disbursal_Transaction__c/validationRules/loan__Transaction_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Transaction_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>loan__Disbursal_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Disbursal Transaction Date cannot be greater than calendar date.</errorMessage>
</ValidationRule>